- Fixed "make install" error caused by bugreport file removal.
- Removed some leftover +I code (can_stealth/^).
- Fixed a badword::action block bug with regex (non-fast) badwords, could cause a crash,
  reported by auspice (#0000946).
- Fixed unprecise RPING output at windoze, reported by pak (#0000945).
- Fixed a bug where operoverride notices were not send when overriding chmodes +aq (#0000831)
  reported by _SciFi_
- Fixed a bug in SVSMODE with setting -b on a user in a channel
- Recoded the "version flag" system, it is now safe to have multiple modules that use the 
  same flag, new functions are VersionflagAdd and VersionflagDel they replace flag_add and
  flag_del
- Fixed a local /kill bug during connection phase, reported by Gilou (#0000952).
- Fixed ripemd-160 vs ripemd160 confusion, reported by thelight (#0000949).
- Little find_client() audit.
- Removed some leftover TECHAT references (#0000953).
- Added a CommandExists function to be used by module coders to determine if a command already
  exists.
- Renamed channel mode +a to "channel admin" it fits better, and it makes us more consistent 
  with other IRCds.
- Made the command parsing loop slightly faster by validating command parameters when a command
  is created rather than when a command is used.
- Made ban version {} also listen for CTCP SCRIPT replies. Some scripts apparently use this to
  report their version info.
- Made it so NETINFO won't report a different cloak key error if the server specifies * for the
  cloak keys. Useful for services that rely on VHP.
- Misc /whois and webtv whois fixes
- Added CASEMAPPING=ascii as per request
- /WHO code cleanup + partial recode + bugfixes
- Updated example.conf about U-lines since many people set them wrong.
- Fixed numeric checking.
- Moved /stats zip from NOTICE to RPL_TEXT, updated stats documentation.
- Made it so it is no longer necessary to copy the ModuleInfo structure passed to Mod_Test
  and Mod_Init. Unreal now does this internally.