@@ -2151,3 +2151,4 @@ seen. gmtime warning still there
 - Moved /stats zip from NOTICE to RPL_TEXT, updated stats documentation.
 - Made it so it is no longer necessary to copy the ModuleInfo structure passed to Mod_Test
   and Mod_Init. Unreal now does this internally.
+- Code cleanup/merge m_join/channel_link: fixed multiple channelmode +L problems.
